// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app integration integration with sideboard click 1`] = `
"<div class=\\"App\\">
  <main>
    <div class=\\"canvasWrapper\\">
      <div class=\\"grid\\"><canvas id=\\"myGrid\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"endPtCircle\\"><canvas id=\\"myEndPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"fade-out\\"><canvas id=\\"myStartPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
    </div>
    <div class=\\"controlerWrapper\\">
      <div id=\\"sideboard\\">
        <nav><button id=\\"translation-button\\" class=\\"tab-button\\"><svg alt=\\"Translation\\">btnTrans.svg</svg></button><button id=\\"rotation-button\\" class=\\"tab-button\\"><svg alt=\\"Rotation\\">btnRot.svg</svg></button><button id=\\"reflection-button\\" class=\\"tab-button\\"><svg alt=\\"Reflection\\">btnReflect.svg</svg></button></nav>
        <div id=\\"translation\\" class=\\"tab\\">
          <div class=\\"controls\\"><input name=\\"setTranslationFactor\\" type=\\"number\\" min=\\"0\\" max=\\"18\\" id=\\"factorBox\\" class=\\"controlInputNum\\" value=\\"1\\"><button name=\\"up\\" alt=\\"up button\\" id=\\"up\\" class=\\"controlBtn\\"><svg class=\\"upBtn\\">btnTransArrow.svg</svg></button><button name=\\"left\\" alt=\\"left button\\" id=\\"left\\" class=\\"controlBtn\\"><svg class=\\"leftBtn\\">btnTransArrow.svg</svg></button><button name=\\"right\\" alt=\\"right button\\" id=\\"right\\" class=\\"controlBtn\\"><svg class=\\"rightBtn\\">btnTransArrow.svg</svg></button><button name=\\"down\\" alt=\\"down button\\" id=\\"down\\" class=\\"controlBtn\\"><svg class=\\"downBtn\\">btnTransArrow.svg</svg></button></div>
        </div>
      </div>
      <div class=\\"call-stack\\">
        <div class=\\"calling-card\\" id=\\"0\\"><svg>btnTransArrow.svg</svg>
          <p>Move shape 1 units up</p><button>X</button>
        </div>
        <div class=\\"calling-card\\" id=\\"1\\"><svg>btnTransArrow.svg</svg>
          <p>Move shape 1 units down</p><button>X</button>
        </div>
        <div class=\\"calling-card\\" id=\\"2\\"><svg>btnTransArrow.svg</svg>
          <p>Move shape 1 units left</p><button>X</button>
        </div>
        <div class=\\"calling-card\\" id=\\"3\\"><svg>btnTransArrow.svg</svg>
          <p>Move shape 1 units right</p><button>X</button>
        </div>
        <div class=\\"button-div\\"><button id=\\"clear-button\\">CLEAR</button><button id=\\"run-button\\">RUN</button></div>
      </div>
    </div>
    <div></div>
  </main>
</div>"
`;

exports[`app integration integration with sideboard click 2`] = `
"<div class=\\"App\\">
  <main>
    <div class=\\"canvasWrapper\\">
      <div class=\\"grid\\"><canvas id=\\"myGrid\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"endPtCircle\\"><canvas id=\\"myEndPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"fade-out\\"><canvas id=\\"myStartPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
    </div>
    <div class=\\"controlerWrapper\\">
      <div id=\\"sideboard\\">
        <nav><button id=\\"translation-button\\" class=\\"tab-button\\"><svg alt=\\"Translation\\">btnTrans.svg</svg></button><button id=\\"rotation-button\\" class=\\"tab-button\\"><svg alt=\\"Rotation\\">btnRot.svg</svg></button><button id=\\"reflection-button\\" class=\\"tab-button\\"><svg alt=\\"Reflection\\">btnReflect.svg</svg></button></nav>
        <div id=\\"rotation\\" class=\\"tab\\">
          <div class=\\"controls\\"><button id=\\"rotate-left\\" name=\\"rotate-left\\" class=\\"controlBtn\\"><svg alt=\\"Counterclockwise Rotate Icon\\">btnRotCounter.svg</svg></button><input id=\\"setPivotPointx\\" class=\\"controlInputNum\\" type=\\"number\\" name=\\"setPivotPointx\\" value=\\"0\\"><input id=\\"setPivotPointy\\" class=\\"controlInputNum\\" type=\\"number\\" name=\\"setPivotPointy\\" value=\\"0\\"><button id=\\"rotate-right\\" name=\\"rotate-right\\" class=\\"controlBtn\\"><svg alt=\\"Counterclockwise Rotate Icon\\">btnRotCounter.svg</svg></button><select id=\\"rotateDrop\\" name=\\"setRotationMag\\">
              <option>90°</option>
              <option>180°</option>
              <option>270°</option>
            </select></div>
        </div>
      </div>
      <div class=\\"call-stack\\">
        <div class=\\"calling-card\\" id=\\"0\\"><svg>btnTransArrow.svg</svg>
          <p>Move shape 1 units up</p><button>X</button>
        </div>
        <div class=\\"calling-card\\" id=\\"1\\"><svg>btnTransArrow.svg</svg>
          <p>Move shape 1 units down</p><button>X</button>
        </div>
        <div class=\\"calling-card\\" id=\\"2\\"><svg>btnTransArrow.svg</svg>
          <p>Move shape 1 units left</p><button>X</button>
        </div>
        <div class=\\"calling-card\\" id=\\"3\\"><svg>btnTransArrow.svg</svg>
          <p>Move shape 1 units right</p><button>X</button>
        </div>
        <div class=\\"button-div\\"><button id=\\"clear-button\\">CLEAR</button><button id=\\"run-button\\">RUN</button></div>
      </div>
    </div>
    <div></div>
  </main>
</div>"
`;

exports[`app integration integration with sideboard click 3`] = `
"<div class=\\"App\\">
  <main>
    <div class=\\"canvasWrapper\\">
      <div class=\\"grid\\"><canvas id=\\"myGrid\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"endPtCircle\\"><canvas id=\\"myEndPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"fade-out\\"><canvas id=\\"myStartPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
    </div>
    <div class=\\"controlerWrapper\\">
      <div id=\\"sideboard\\">
        <nav><button id=\\"translation-button\\" class=\\"tab-button\\"><svg alt=\\"Translation\\">btnTrans.svg</svg></button><button id=\\"rotation-button\\" class=\\"tab-button\\"><svg alt=\\"Rotation\\">btnRot.svg</svg></button><button id=\\"reflection-button\\" class=\\"tab-button\\"><svg alt=\\"Reflection\\">btnReflect.svg</svg></button></nav>
        <div class=\\"tab\\">
          <div class=\\"controls\\"><button id=\\"reflectXBtn\\" name=\\"reflectX\\" class=\\"controlBtn\\"><svg alt=\\"X-reflection icon\\">btnReflectX.svg</svg></button><select id=\\"reflectDrop\\" name=\\"setLineOfReflection\\">
              <option>-9</option>
              <option>-8</option>
              <option>-7</option>
              <option>-6</option>
              <option>-5</option>
              <option>-4</option>
              <option>-3</option>
              <option>-2</option>
              <option>-1</option>
              <option>0</option>
              <option>1</option>
              <option>2</option>
              <option>3</option>
              <option>4</option>
              <option>5</option>
              <option>6</option>
              <option>7</option>
              <option>8</option>
              <option>9</option>
            </select><button id=\\"reflectYBtn\\" name=\\"reflectY\\" class=\\"controlBtn\\"><svg alt=\\"Y-reflection icon\\">btnReflectY.svg</svg></button></div>
        </div>
      </div>
      <div class=\\"call-stack\\">
        <div class=\\"calling-card\\" id=\\"0\\"><svg>btnTransArrow.svg</svg>
          <p>Move shape 1 units up</p><button>X</button>
        </div>
        <div class=\\"calling-card\\" id=\\"1\\"><svg>btnTransArrow.svg</svg>
          <p>Move shape 1 units down</p><button>X</button>
        </div>
        <div class=\\"calling-card\\" id=\\"2\\"><svg>btnTransArrow.svg</svg>
          <p>Move shape 1 units left</p><button>X</button>
        </div>
        <div class=\\"calling-card\\" id=\\"3\\"><svg>btnTransArrow.svg</svg>
          <p>Move shape 1 units right</p><button>X</button>
        </div>
        <div class=\\"button-div\\"><button id=\\"clear-button\\">CLEAR</button><button id=\\"run-button\\">RUN</button></div>
      </div>
    </div>
    <div></div>
  </main>
</div>"
`;

exports[`app integration render app 1`] = `
"<div class=\\"App\\">
  <main>
    <div class=\\"canvasWrapper\\">
      <div class=\\"grid\\"><canvas id=\\"myGrid\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"endPtCircle\\"><canvas id=\\"myEndPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"Circle\\"><canvas id=\\"myStartPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
    </div>
    <div class=\\"controlerWrapper\\">
      <div id=\\"sideboard\\">
        <nav><button id=\\"translation-button\\" class=\\"tab-button\\"><svg alt=\\"Translation\\">btnTrans.svg</svg></button><button id=\\"rotation-button\\" class=\\"tab-button\\"><svg alt=\\"Rotation\\">btnRot.svg</svg></button><button id=\\"reflection-button\\" class=\\"tab-button\\"><svg alt=\\"Reflection\\">btnReflect.svg</svg></button></nav>
      </div>
      <div class=\\"call-stack\\">
        <div class=\\"button-div\\"><button id=\\"clear-button\\">CLEAR</button><button id=\\"run-button\\">RUN</button></div>
      </div>
    </div>
    <div></div>
  </main>
</div>"
`;
